2024-06-05T01:00:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9376441853 # 317
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-05
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 921 1673 / 935 1689
* notice: next accum: outdated-unq outdated-all / unq all: 921 1673 / 936 1690
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-22 2024-06-04]

2024-06-04T01:00:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9359470367 # 316
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-04
* notice: last 14d: unq all: 4 16
* notice: prev accum: outdated-unq outdated-all / unq all: 918 1669 / 933 1687
* notice: next accum: outdated-unq outdated-all / unq all: 921 1673 / 935 1689
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-05-20 2024-05-21] / [2024-06-03]

2024-06-03T01:00:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9342622991 # 315
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-03
* notice: last 14d: unq all: 4 18
* notice: prev accum: outdated-unq outdated-all / unq all: 917 1667 / 932 1686
* notice: next accum: outdated-unq outdated-all / unq all: 918 1669 / 933 1687
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-19] / [2024-06-02]

2024-06-02T01:03:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9334485282 # 314