@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-05T01:00:00Z",
-  "count_outdated" : 1673,
-  "uniques_outdated" : 921,
-  "count" : 1690,
-  "uniques" : 936,
+  "timestamp" : "2024-06-06T00:59:52Z",
+  "count_outdated" : 1676,
+  "uniques_outdated" : 922,
+  "count" : 1691,
+  "uniques" : 937,
   "clones" : [
-    {
-      "timestamp": "2024-05-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-23T00:00:00Z",
       "count": 1,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2024-06-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
