@@ -1,12 +1,7 @@
 {
-  "count": 16,
+  "count": 15,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2024-05-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-23T00:00:00Z",
       "count": 1,
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2024-06-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
