@@ -1,3 +1,12 @@
+2024-06-06T00:59:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9393399497 # 318
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-06
+* notice: last 14d: unq all: 5 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 921 1673 / 936 1690
+* notice: next accum: outdated-unq outdated-all / unq all: 922 1676 / 937 1691
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-05-22] / [2024-06-05]
+
 2024-06-05T01:00:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9376441853 # 317
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-05
